Upper case directive

--- a/src/app/pages/superheroes-page/superhero-details/superhero-details-data/superhero-details-data.component.html
+++ b/src/app/pages/superheroes-page/superhero-details/superhero-details-data/superhero-details-data.component.html
@@ -16,7 +16,7 @@
 
   <mat-form-field class="hero-details-form-field">
     <mat-label>Nombre de Super Heroe</mat-label>
-    <input formControlName="name" matInput placeholder="Super man" />
+    <input formControlName="name" uppercase matInput placeholder="Super man" />
   </mat-form-field>
 
   <mat-form-field class="hero-details-form-field">
