Hero edit validators & Edit function optimized

--- a/src/app/pages/superheroes-page/superhero-details/superhero-details-header/superhero-details-header.component.html
+++ b/src/app/pages/superheroes-page/superhero-details/superhero-details-header/superhero-details-header.component.html
@@ -14,7 +14,7 @@
       <app-button [disabled]="loading" *ngIf="!isNewHero" color="danger" (onClick)="cancel()">
         Cancelar
       </app-button>
-      <app-button [disabled]="loading" (onClick)="save.emit()">Guardar</app-button>
+      <app-button [disabled]="loading || !isFormValid" (onClick)="save.emit()">Guardar</app-button>
     </ng-template>
     <app-button [disabled]="loading" *ngIf="!isEditing" (click)="edit.emit()"> Editar </app-button>
   </div>
