--- a/src/app/pages/superheroes-page/superhero-details/superhero-details.component.html
+++ b/src/app/pages/superheroes-page/superhero-details/superhero-details.component.html
@@ -2,6 +2,7 @@
   <app-superhero-details-header
     [isNewHero]="isNewHero()"
     [isEditing]="isEditing()"
+    [isFormValid]="superHeroForm.valid"
     [loading]="loading()"
     [isFormDirty]="superHeroForm.dirty"
     [showActions]="!notFound() && !loading()"
